--- a/index1.html
+++ b/index1.html
@@ -21,7 +21,7 @@
         <h1>
             Добро пожаловать на наш супер портал!!!
         </h1>
-        <h2>Здесь можете получить следующие услуги:</h2>
+        <h2>Здесь можете получить следующие услугИ:</h2>
         <a href="Demo01.html">Посмотреть на картинку со звуком</a><br />
         <a href="calc.php">Посчитать на уникальном калькуляторе</a><br />
         <a href="Demo02.php">Удвоитель числа</a><br />
