--- a/index1.html
+++ b/index1.html
@@ -17,6 +17,7 @@
     <body>
         <button><a href="login.php">Войти в систему</a></button><br />
         <button><a href="logout.php">Выйти из системы</a></button><br />
+        <button><a href="signin.php">Регистрация</a></button><br />
         
         <h1>
             Добро пожаловать на наш супер портал!!!
