--- a/rates.html
+++ b/rates.html
@@ -19,7 +19,7 @@
     <script src="//www.cbr-xml-daily.ru/daily_jsonp.js" async></script>
 </head>
 <body onload="CBR_XML_Daily_Ru(rates);">
-    <button style="width: 200px; text-align: center;"><a href="index1.html" style="text-decoration:none;">ДОМ</a></button><br />
+    <button style="width: 200px; text-align: center;"><a href="index.html" style="text-decoration:none;">ДОМ</a></button><br />
     <h1>Rates</h1>
     <div id="USD">Доллар США — 00,0000 руб.</div>
     <div id="AZN">Азербайджанский манат — 00,0000 руб.</div>
