--- a/Demo01.html
+++ b/Demo01.html
@@ -31,7 +31,7 @@
 	</head>
 	
 	<body>
-		<button style="width: 200px; text-align: center;"><a href="index1.html" style="text-decoration:none;">ДОМ</a></button><br />
+		<button style="width: 200px; text-align: center;"><a href="index.html" style="text-decoration:none;">ДОМ</a></button><br />
 		<h1>
 			<span>Just HTML!!!</span>
 		</h1>
